--- a/support_data/category_mapping.json
+++ b/support_data/category_mapping.json
@@ -46,5 +46,5 @@
     "klenteng": "Tempat Ibadah",
     "pura": "Tempat Ibadah",
     "kapel": "Tempat Ibadah",
-    "rumah ibadah": "Tempat Ibadah",
+    "rumah ibadah": "Tempat Ibadah"
 }
