--- a/support_data/category_mapping.json
+++ b/support_data/category_mapping.json
@@ -21,6 +21,7 @@
     "diving": "Bahari",
     "pesisir": "Bahari",
     "pulau": "Bahari",
+    "alam": "Cagar Alam",
     "cagar alam": "Cagar Alam",
     "hutan lindung": "Cagar Alam",
     "taman nasional": "Cagar Alam",
